--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
     // ========== SISTEMA DE ACESSO ==========
     // VOCÊ EDITA APENAS ESTA LISTA!
     const EMAILS_AUTORIZADOS = [
-        "SEUEMAIL@GMAIL.COM",      // SEU EMAIL (TROQUE ISSO!)
+        "jeffinho.oliveira94@gmail.com",      // SEU EMAIL (TROQUE ISSO!)
         "cliente1@gmail.com",       // CLIENTE 1
         "cliente2@hotmail.com",     // CLIENTE 2
         "cliente3@yahoo.com.br"     // CLIENTE 3
