--- a/index.html
+++ b/index.html
@@ -875,8 +875,8 @@
     // VOCÊ EDITA APENAS ESTA LISTA!
     const EMAILS_AUTORIZADOS = [
         "jeffinho.oliveira94@gmail.com",      // SEU EMAIL (TROQUE ISSO!)
-        "cliente1@gmail.com",       // CLIENTE 1
-        "cliente2@hotmail.com",     // CLIENTE 2
+        "hugoalex719@gmail.com",       // CLIENTE 1
+        "rosejulio14012019@gmail.com",     // CLIENTE 2
         "cliente3@yahoo.com.br"     // CLIENTE 3
         // ADICIONE MAIS EMAILS AQUI ↓
         // "novocliente@gmail.com",
