--- a/index.html
+++ b/index.html
@@ -881,6 +881,9 @@
         // ADICIONE MAIS EMAILS AQUI ↓
         // "novocliente@gmail.com",
         // "outrocliente@email.com"
+        "gabrieldirectpro@gmail.com",
+        "Machadodias7254@gmail.com",
+        "Jeissonbrambila@gmail.com",
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
