--- a/index.html
+++ b/index.html
@@ -884,6 +884,7 @@
         "gabrieldirectpro@gmail.com",
         "Machadodias7254@gmail.com",
         "Jeissonbrambila@gmail.com",
+        "emylimaiara22@gmail.com",
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
