--- a/index.html
+++ b/index.html
@@ -877,14 +877,14 @@
         "jeffinho.oliveira94@gmail.com",      // SEU EMAIL (TROQUE ISSO!)
         "hugoalex719@gmail.com",       // CLIENTE 1
         "rosejulio14012019@gmail.com",     // CLIENTE 2
-        "cliente3@yahoo.com.br"     // CLIENTE 3
+        "cliente3@yahoo.com.br",    // CLIENTE 3
         // ADICIONE MAIS EMAILS AQUI ↓
         // "novocliente@gmail.com",
-        // "outrocliente@email.com"
+        // "outrocliente@email.com",
         "gabrieldirectpro@gmail.com",
         "Machadodias7254@gmail.com",
         "Jeissonbrambila@gmail.com",
-        "emylimaiara22@gmail.com",
+        "emylimaiara22@gmail.com"
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
