--- a/index.html
+++ b/index.html
@@ -884,7 +884,9 @@
         "gabrieldirectpro@gmail.com",
         "Machadodias7254@gmail.com",
         "Jeissonbrambila@gmail.com",
-        "emylimaiara22@gmail.com"
+        "emylimaiara22@gmail.com",
+        "helenmanfredi20@gmail.com",
+        "gilbertosantosbispo@gmail.com"
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
