--- a/index.html
+++ b/index.html
@@ -886,7 +886,8 @@
         "Jeissonbrambila@gmail.com",
         "emylimaiara22@gmail.com",
         "helenmanfredi20@gmail.com",
-        "gilbertosantosbispo@gmail.com"
+        "gilbertosantosbispo@gmail.com",
+        "Paulojk022@gmail.com"
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
