--- a/index.html
+++ b/index.html
@@ -887,7 +887,9 @@
         "emylimaiara22@gmail.com",
         "helenmanfredi20@gmail.com",
         "gilbertosantosbispo@gmail.com",
-        "Paulojk022@gmail.com"
+        "Paulojk022@gmail.com",
+        "loowscar01@gmail.com",
+        "valsenirsouza@gmail.com"
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
