--- a/index.html
+++ b/index.html
@@ -889,7 +889,8 @@
         "gilbertosantosbispo@gmail.com",
         "Paulojk022@gmail.com",
         "loowscar01@gmail.com",
-        "valsenirsouza@gmail.com"
+        "valsenirsouza@gmail.com",
+        "andreluizsb94@gmail.com"
     ];
     // ========== FIM DA LISTA EDITÁVEL ==========
 
